[gd_scene load_steps=3 format=3 uid="uid://shop_001"]

[ext_resource type="Script" path="res://shop.gd" id="1"]
[ext_resource type="Texture2D" path="res://Shop.jpg" id="2"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0

[node name="BreakTimer" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Break Timer: 10"
horizontal_alignment = 1

[node name="CoalLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Coal Shoveled: 0"
horizontal_alignment = 1

[node name="CoinsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Coins: 0"
horizontal_alignment = 1

[node name="ClaimButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Claim Coin (100 coal)"

[node name="ShovelButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Better Shovel - Cost: 1"

[node name="CartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Coal Cart - Cost: 5"

[node name="FurnaceUpgrade" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Auto Furnace - Cost: 10"

[node name="FurnaceButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Go to Furnace"

[connection signal="pressed" from="VBoxContainer/ClaimButton" to="." method="_on_claim_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ShovelButton" to="." method="_on_shovel_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CartButton" to="." method="_on_cart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/FurnaceUpgrade" to="." method="_on_furnace_upgrade_pressed"]
[connection signal="pressed" from="VBoxContainer/FurnaceButton" to="." method="_on_furnace_button_pressed"]
